--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <script src="/app.js"></script>
+    <script src="https://github.com/Alijon-MrC/first-site/blob/main/app.js"></script>
 </body>
 
 </html>
